--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "BOT_PREFIX": "Put command prefix",
     "DEVS": [
-        "Put developer id(s)"
+        "Put developer id(s) in int format"
     ],
     "TEST_GUILDS": [
         "Put test guild id(s) in int format"
